# pypi-code

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  WORKSPACE
apps/demo/: BUILD  main.py
repos/rules_py/: WORKSPACE
repos/rules_py/python/: BUILD  defs.bzl  repositories.bzl  wrapper.bzl
repos/rules_py/python/private/: BUILD  _pyo3-build-config.tmpl.txt  py_binary.bzl  runtime.bzl
repos/rules_py/python/private/wrapper-skel/: BUILD
repos/rules_py/python/private/wrapper-skel/src/: main.rs
rules/python/: defs.bzl
rules/python/private/: BUILD  _bash_runner.tpl  py_binary.bzl
rules/zig/: repositories.bzl  toolchains.bzl
rules/zip/: BUILD  repositories.bzl  toolchains.bzl
rules/zip/private/: toolchains.bzl
rules/zip/toolchains/: BUILD
