"""
"""

module(name = "pypi")

# Dependencies
bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "hermetic_cc_toolchain", version = "2.0.0")
bazel_dep(name = "python", version = "3.11.4")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

# Toolchains
register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.28",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)
register_toolchains("@python//:toolchain")

# Local Overrides for Dependencies
local_path_override(module_name = "python", path = "third_party/python")
local_path_override(module_name = "openssl", path = "third_party/openssl")
local_path_override(module_name = "ncurses", path = "third_party/ncurses")
local_path_override(module_name = "libedit", path = "third_party/libedit")
local_path_override(module_name = "libuuid", path = "third_party/libuuid")
local_path_override(module_name = "libffi", path = "third_party/libffi")
local_path_override(module_name = "xz", path = "third_party/xz")

archive_override(
    module_name = "rules_perl",
    urls = [
        "https://github.com/bazelbuild/rules_perl/archive/76bc70ef16b4bab2d6c9cd5ea387405e6b3bee6a.tar.gz",
    ],
    strip_prefix = "rules_perl-76bc70ef16b4bab2d6c9cd5ea387405e6b3bee6a",
    integrity = "sha256-uHDm8XnLUKTMzaXykUAth63MrG3xhG77FhtYcANCrI0=",
)

archive_override(
    module_name = "rules_foreign_cc",
    urls = [
        "https://github.com/dstufft/rules_foreign_cc/archive/9b11973b878093f19c475355d627955d224babaf.tar.gz",
    ],
    strip_prefix = "rules_foreign_cc-9b11973b878093f19c475355d627955d224babaf",
    integrity = "sha256-7kBPgvfYmLWJxdLO/Az8f5weSpvEb1xChvPKo5u7XGs=",
)

archive_override(
    module_name = "hermetic_cc_toolchain",
    urls = [
        "https://github.com/uber/hermetic_cc_toolchain/archive/c602db477e16f1cb10bfbd6c68013604500c4fbe.tar.gz",
    ],
    strip_prefix = "hermetic_cc_toolchain-c602db477e16f1cb10bfbd6c68013604500c4fbe",
    integrity = "sha256-g0WeBysSEkiHEdWmGkUnvTJEGwvqa/N+FDZDNPhUcoM=",
)
